syntax = "proto3";

package bookdir.v1;
option go_package = "gitlab.com/insanitywholesale/bookdir/proto/v1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service BookDir {
	rpc GetAllBooks(Empty) returns (BookList) {
		option (google.api.http) = {
			get: "/api/v1/books"
		};
	};
	rpc AddBook(Book) returns (BookList) {
		option (google.api.http) = {
			post: "/api/v1/book"
			body: "*"
		};
	};
};

message BookList {
	repeated Book books = 1;
};

message Book {
	string ISBN = 1;
	string Title = 2;
	Author Author = 3;
	uint32 Year = 4;
	uint32 Edition = 5;
	Publisher Publisher = 6;
	uint32 Pages = 7;
	string Category = 8;
	bool PDF = 9;
	bool Owned = 10;
};

message Author {
	uint32 AuthorID = 1;
	string FirstName = 2;
	string MiddleName = 3;
	string LastName = 4;
	uint32 YearBorn = 5;
	uint32 YearDied = 6;
	uint32 BooksWritten = 7;
};

message Publisher {
	uint32 PublisherID = 1;
	string Name = 2;
	uint32 YearStarted = 3;
	uint32 YearEnded = 4;
	uint32 BooksPublished = 5;
};

message Empty {};
